2004-05-20  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-inews-make-draft-meta-information): Really
	get it right.

2004-05-19  Ben Menasha  <bmenasha@benmenasha.net>

	* nnmh.el (nnmh-request-list-1): Don't check the link count
	before descending.  (small patch)

2004-05-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-inews-make-draft-meta-information): Fix quote
	stuff. 

	* gnus-start.el (gnus-subscribe-hierarchical-interactive): Match
	on real group name.

	* gnus-art.el (gnus-signature-limit): Doc fix.

	* gnus-msg.el (gnus-inews-make-draft): Quote list.

	* pgg-pgp.el (pgg-pgp-verify-region): Clean up.

2004-05-19  Michael Schierl  <schierlm-usenet@gmx.de>

	* pgg-pgp.el (pgg-pgp-verify-region): Default when signature
	isn't a string.

2004-05-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-draft.el (gnus-draft-send): Bind
	rfc2047-encode-encoded-words.

	* rfc2047.el (rfc2047-encode-region): Encode =? strings. 
	(rfc2047-encodable-p): Say that =? needs encoding.
	(rfc2047-encode-encoded-words): New variable.

	* gnus-group.el (gnus-group-select-group): Doc fix.

	* gnus-draft.el (gnus-draft-setup): Mark all replied as replied. 

	* gnus-group.el (gnus-group-mode): Set show-trailing-whitespace
	to nil.
	
	* gnus-cache.el (gnus-cache-possibly-enter-article): Use it.

	* nnheader.el (nnheader-get-lines-and-char): New function.

2004-05-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-msg.el (gnus-summary-followup-with-original): Document
	yanking of region when active.

2004-05-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-get-unread-articles): Do nothing for foreign
	groups if the group level is higher than the specified value.

2004-05-18  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-group.el (gnus-group-jump-to-group-prompt): Allow an alist.
	(gnus-group-jump-to-group): Added prefix argument using
	`gnus-group-jump-to-group-prompt'.  Query before jumping to
	non-active group.
